objects/SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AddressNumber__c</fullName>
        <label>Address Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders (Carrier)</relationshipLabel>
        <relationshipName>Sales_Orders_Carriers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryInstructionsLine1__c</fullName>
        <label>Delivery Instructions Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstructionsLine2__c</fullName>
        <label>Delivery Instructions Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoldCode__c</fullName>
        <label>Hold Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncoTerms__c</fullName>
        <label>Inco Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderAddressKey__c</fullName>
        <externalId>true</externalId>
        <label>OrderAddressKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderExchangeRate__c</fullName>
        <label>Order Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalOrder__c</fullName>
        <label>Original Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentInstrument__c</fullName>
        <label>Payment Instrument</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedOrder__c</fullName>
        <label>Related Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteCode__c</fullName>
        <label>Route Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipFromWarehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From Warehouse</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders (Ship From Warehouse)</relationshipLabel>
        <relationshipName>ShipFromWarehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From</label>
        <referenceTo>SupplierShipToAddress__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipToCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders (Ship To Customer)</relationshipLabel>
        <relationshipName>Sales_Orders_Ship_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>AccountShiptoAddress__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SoldTo__c</fullName>
        <label>Sold To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TakenBy__c</fullName>
        <label>Taken By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_OVRWRT__c</fullName>
        <label>VAT_OVRWRT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>